[package]
name = "ranger"
version = "0.1.0"
authors = ["Dan Cline <danieledwardcline@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
documentation = "https://docs.rs/ranger"
repository = "https://github.com/rjected/ranger"
homepage = "https://docs.rs/rjected"
description = """
P2P utilities for use with ethers-rs types and tooling
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "cli",
    "relay",
]

[dependencies]
relay = { version = "^0.1.0", default-features = false, path = "./relay" }

# temp
[patch.crates-io]
revm = { git = "https://github.com/bluealloy/revm" }
