[package]
name = "sauron"
version = "0.1.0"
authors = ["Dan Cline <danieledwardcline@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/ethers"
repository = "https://github.com/gakonst/ethers-rs"
homepage = "https://docs.rs/ethers"
description = """
How to use ethers and other tooling to listen to the p2p network
"""

[dependencies]
tracing = { version = "0.1.29", default-features = false }
ethereum-forkid = { version = "0.11.0", default-features = false }
open-fastrlp = { version = "0.1.4", features = ["alloc", "derive", "std"] }
devp2p-rs = { git = "https://github.com/rjected/devp2p-rs" }
tokio-stream = { version = "0.1.9", features = ["sync"] }
bytes = { version = "1.1", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter", "std"] }
trust-dns-resolver = "0.22"
task-group = { git = "https://github.com/vorot93/task-group" }
hex = "0.4"
hex-literal = "0.3.4"
clap = "4.0.4"
anyhow = "1.0"
cidr = "0.2.1"
maplit = "1.0.2"
secp256k1 = { version = "0.24", features = [
  "global-context",
  "rand-std",
  "recovery",
] }

# for status
ethp2p = { git = "https://github.com/rjected/ethp2p" }
foundry-config = { git = "http://github.com/foundry-rs/foundry" }
anvil-core = { git = "https://github.com/foundry-rs/foundry" }
anvil = { git = "https://github.com/foundry-rs/foundry" }
ruint = { version = "1.3.0", features = ["fastrlp", "serde"] }
ranger = { path = "../" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = "1.5"

[[bin]]
name = "sauron"
path = "./sauron.rs"
