[package]
name = "relay"
version = "0.1.0"
authors = ["Dan Cline <danieledwardcline@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/ranger"
repository = "https://github.com/Rjected/ranger"
homepage = "https://docs.rs/ranger"
description = """
Ranger uses akula to listen to the network and provide subscription APIs for
listening to and processing network messages, as well as converting them to
ethers-rs types
"""

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }

async-trait = "0.1"
tracing = { version = "0.1.29", default-features = false }
devp2p-rs = { git = "https://github.com/rjected/devp2p-rs" }
ethereum-forkid = { version = "0.10.0", default-features = false }
rlp-derive = { version = "0.1.0", default-features = false }
rlp = { version = "0.5.1", default-features = false }
futures-core = { version = "0.3.21" }
async-stream = { version = "0.3.2" }
tokio-stream = { version = "0.1.9", features = ["sync"] }
parking_lot = { version = "0.12.0", default-features = false, features = ["deadlock_detection"] }
bytes = { version = "1.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
trust-dns-resolver = { version = "0.21" }
thiserror = "1"
tokio = { version = "1.20", features = ["full", "rt"] }

# determine if necessary
task-group = { git = "https://github.com/vorot93/task-group" }
hex = { version = "0.4" }
clap = { version = "3.1.5" }
anyhow = { version = "1.0" }
ethereum-types = { version = "0.13.1" }
cidr = { version = "0.2.1" }
maplit = { version = "1.0.2" }
secp256k1 = { version = "0.24", features = [
  "global-context",
  "rand-std",
  "recovery",
] }

# for p2p types
ethp2p = { git = "https://github.com/rjected/ethp2p" }
anvil-core = { git = "https://github.com/foundry-rs/foundry" }
fastrlp = { version = "0.1.3", features = ["alloc", "derive", "std"] }
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["abigen", "legacy", "ws"] }

# chain match
foundry-config = { git = "http://github.com/foundry-rs/foundry" }

# for tower-rlpx
tower = { version = "0.4", features = ["full"] }

# for a string
arrayvec = { version = "0.7", features = ["serde"] }

[dev-dependencies]
# for status
foundry-config = { git = "http://github.com/foundry-rs/foundry" }
ruint = { version = "1.3.0", features = ["fastrlp", "serde"] }
hex-literal = "0.3.4"

[lib]
