[package]
name = "relay"
version = "0.1.0"
authors = ["Dan Cline <danieledwardcline@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/ranger"
repository = "https://github.com/Rjected/ranger"
homepage = "https://docs.rs/ranger"
description = """
Ranger uses akula to listen to the network and provide subscription APIs for
listening to and processing network messages, as well as converting them to
ethers-rs types
"""

[dependencies]
async-trait = "0.1"
tracing = { version = "0.1.29", default-features = false }
futures-core = { version = "0.3.21" }
tokio-stream = { version = "0.1.9", features = ["sync"] }
parking_lot = { version = "0.12.0", default-features = false, features = ["deadlock_detection"] }
bytes = { version = "1.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
thiserror = "1"
tokio = { version = "1.20", features = ["full", "rt"] }
hex = { version = "0.4" }

devp2p-rs = { git = "https://github.com/rjected/devp2p-rs" }
ethereum-forkid = { version = "0.10.0", default-features = false }
ethp2p = { git = "https://github.com/rjected/ethp2p" }
anvil-core = { git = "https://github.com/foundry-rs/foundry" }
fastrlp = { version = "0.1.3", features = ["alloc", "derive", "std"] }
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["abigen", "legacy", "ws"] }
foundry-config = { git = "http://github.com/foundry-rs/foundry" }
# for the capability name
arrayvec = { version = "0.7" }

# for the tower service
tower = { version = "0.4", features = ["full"] }

[dev-dependencies]
ruint = { version = "1.3.0", features = ["fastrlp"] }
hex-literal = "0.3.4"

[lib]
